# mercato-analytics

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.dlt/: secrets.toml.example
.github/dbt_profiles/: .user.yml  profiles.yml
.github/workflows/: ci.yml  deploy-dashboard.yml
dashboard/: .env.example  README.md  evidence.config.yaml
dashboard/pages/: club-moves.md  financial-roi.md  index.md  players.md  recent-transfers.md
dashboard/sources/mercato_analytics/: connection.yaml  dim_club.sql  dim_player.sql  fct_transfer.sql  fct_wikipedia_transfer.sql
dbt/: .sqlfluff  README.md  dbt_project.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: README.md  _marts__models.yml  _marts__unit_tests.yml  dim_club.sql  dim_player.sql  dim_team.sql  fct_match.sql  fct_transfer.sql  (+1 more)
dbt/seeds/: _seeds.yml  clubelo_club_mapping.csv  competition_champion_scope.csv  generate_clubelo_club_mapping.py
dbt/tests/: assert_market_value_non_negative.sql  assert_transfer_fee_non_negative.sql
ingestion/clubelo/: README.md  pipeline.py
ingestion/fbref/: README.md
ingestion/footballdata/: README.md  pipeline.py
ingestion/transfermarkt/: README.md  pipeline.py
ingestion/wikipedia_transfers/: README.md  pipeline.py
orchestration/: .env.example  README.md  docker-compose.override.yml  requirements.txt
orchestration/.astro/: config.yaml  dag_integrity_exceptions.txt
orchestration/dags/: README.md  full_refresh_monthly.py  ingest_daily.py  transform.py
orchestration/include/: alerting.py  assets.py
snowflake/: README.md  setup.sql
(+28 files in other folders)
